--- a/1- AgentWorkflow_parallelization/parallel_execution_agents.ipynb
+++ b/1- AgentWorkflow_parallelization/parallel_execution_agents.ipynb
@@ -130,7 +130,7 @@
     "# print(\"Product Reviews: \", product_reviews)\n",
     "\n",
     "# Initialize OpenAI LLM\n",
-    "llm = OpenAI(model=\"gpt-4o\", api_key=\"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\")\n",
+    "llm = OpenAI(model=\"gpt-4o\", api_key=\" \")\n",
     "\n",
     "async def retrieve_user_profile(ctx: Context) -> str:\n",
     "    \"\"\"Fetches user information.\"\"\"\n",
@@ -198,7 +198,7 @@
     "    Product Information: {product_info}\n",
     "    \"\"\"\n",
     "    \n",
-    "    client = OpenAI_from_openai(api_key=\"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\")\n",
+    "    client = OpenAI_from_openai(api_key=\" \")\n",
     "    messages = [{\"role\": \"user\", \"content\": prompt_template}]\n",
     "    \n",
     "    response = client.chat.completions.create(\n",
@@ -238,7 +238,7 @@
     "    Product Reviews: {product_reviews}\n",
     "    \"\"\"\n",
     "    \n",
-    "    client = OpenAI_from_openai(api_key=\"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\")\n",
+    "    client = OpenAI_from_openai(api_key=\" \")\n",
     "    messages = [{\"role\": \"user\", \"content\": prompt_template}]\n",
     "    \n",
     "    response = client.chat.completions.create(\n",
@@ -275,7 +275,7 @@
     "    Product Information: {product_info}\n",
     "    \"\"\"\n",
     "    \n",
-    "    client = OpenAI_from_openai(api_key=\"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\")\n",
+    "    client = OpenAI_from_openai(api_key=\" \")\n",
     "    messages = [{\"role\": \"user\", \"content\": prompt_template}]\n",
     "    \n",
     "    response = client.chat.completions.create(\n",
