--- a/5-AgentFromCoreModule_parallelization/parallel_execution.ipynb
+++ b/5-AgentFromCoreModule_parallelization/parallel_execution.ipynb
@@ -65,7 +65,7 @@
     "# print(\"Product Reviews: \", product_reviews)\n",
     "\n",
     "# Initialize OpenAI LLM\n",
-    "llm = OpenAI(model=\"gpt-4o\", api_key=\"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\")\n",
+    "llm = OpenAI(model=\"gpt-4o\", api_key=\" \")\n",
     "\n",
     "data = {}\n",
     "\n",
@@ -139,7 +139,7 @@
     "    Product Information: {product_info}\n",
     "    \"\"\"\n",
     "    \n",
-    "    client = OpenAI_from_openai(api_key=\"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\")\n",
+    "    client = OpenAI_from_openai(api_key=\" \")\n",
     "    messages = [{\"role\": \"user\", \"content\": prompt_template}]\n",
     "    \n",
     "    response = client.chat.completions.create(\n",
@@ -178,7 +178,7 @@
     "    Product Reviews: {product_reviews}\n",
     "    \"\"\"\n",
     "    \n",
-    "    client = OpenAI_from_openai(api_key=\"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\")\n",
+    "    client = OpenAI_from_openai(api_key=\" \")\n",
     "    messages = [{\"role\": \"user\", \"content\": prompt_template}]\n",
     "    \n",
     "    response = client.chat.completions.create(\n",
@@ -216,7 +216,7 @@
     "    Product Information: {product_info}\n",
     "    \"\"\"\n",
     "    \n",
-    "    client = OpenAI_from_openai(api_key=\"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\")\n",
+    "    client = OpenAI_from_openai(api_key=\" \")\n",
     "    messages = [{\"role\": \"user\", \"content\": prompt_template}]\n",
     "    \n",
     "    response = client.chat.completions.create(\n",
