--- a/6-Workflows_Scratch_concurrency/sequential_workflow.ipynb
+++ b/6-Workflows_Scratch_concurrency/sequential_workflow.ipynb
@@ -158,7 +158,7 @@
     "        User Profile: {user_profile}\n",
     "        Product Information: {product_info}\n",
     "        \"\"\"\n",
-    "        client = OpenAI_from_openai(api_key=\"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\")\n",
+    "        client = OpenAI_from_openai(api_key=\" \")\n",
     "        messages = [{\"role\": \"user\", \"content\": prompt_template}]\n",
     "        response = client.chat.completions.create(\n",
     "            model=\"gpt-4o\",\n",
@@ -187,7 +187,7 @@
     "        User Profile: {user_profile}\n",
     "        Product Reviews: {product_reviews}\n",
     "        \"\"\"\n",
-    "        client = OpenAI_from_openai(api_key=\"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\")\n",
+    "        client = OpenAI_from_openai(api_key=\" \")\n",
     "        messages = [{\"role\": \"user\", \"content\": prompt_template}]\n",
     "        response = client.chat.completions.create(\n",
     "            model=\"gpt-4o\",\n",
@@ -215,7 +215,7 @@
     "        User Profile: {user_profile}\n",
     "        Product Information: {product_info}\n",
     "        \"\"\"\n",
-    "        client = OpenAI_from_openai(api_key=\"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\")\n",
+    "        client = OpenAI_from_openai(api_key=\" \")\n",
     "        messages = [{\"role\": \"user\", \"content\": prompt_template}]\n",
     "        response = client.chat.completions.create(\n",
     "            model=\"gpt-4o\",\n",
